# lib/api-spec/openapi.yaml
@@ -762,6 +762,12 @@ components:
           default: "#C9A84C"
         studioSidebarTextColor:
           type: ["string", "null"]
+        studioBackgroundUrl:
+          type: ["string", "null"]
+        studioFocalX:
+          type: ["number", "null"]
+        studioFocalY:
+          type: ["number", "null"]
         folderId:
           type: ["integer", "null"]
         publicSlug:
@@ -887,6 +893,12 @@ components:
           type: string
         studioSidebarTextColor:
           type: ["string", "null"]
+        studioBackgroundUrl:
+          type: ["string", "null"]
+        studioFocalX:
+          type: ["number", "null"]
+        studioFocalY:
+          type: ["number", "null"]
 
     StudioProjectMeta:
       type: object
@@ -939,6 +951,12 @@ components:
           default: "#C9A84C"
         studioSidebarTextColor:
           type: ["string", "null"]
+        studioBackgroundUrl:
+          type: ["string", "null"]
+        studioFocalX:
+          type: ["number", "null"]
+        studioFocalY:
+          type: ["number", "null"]
       required:
         - id
         - name
@@ -1041,6 +1059,12 @@ components:
           default: "#C9A84C"
         studioSidebarTextColor:
           type: ["string", "null"]
+        studioBackgroundUrl:
+          type: ["string", "null"]
+        studioFocalX:
+          type: ["number", "null"]
+        studioFocalY:
+          type: ["number", "null"]
         publicSlug:
           type: string
         materials:
